- Fixed list positioning issue on mobile in section two - Tweaked styles for h1 heading to respond better on large-device width - Disabled sticky nav on smaller devices

--- a/styles/partials/_masthead.scss
+++ b/styles/partials/_masthead.scss
@@ -2,6 +2,10 @@
   background-color: rgba(38, 38, 42, 0.95);
   padding: 1.3rem;
 
+  @media (max-width: $small-devices) {
+      position: relative;
+  }
+
   img {
     margin-right: 2em;
 
